Feat: Project setup

--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "moment",
+              "buffer"
+            ],
             "outputPath": "dist/iiprwc-fe",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -100,5 +104,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
